# isip

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  README.md  STATUS.md  docker-compose.yml  projectplan.md  test_e2e.py  test_mcp_server.py
docs/: SHARED_SERVICES.md
examples/: example_sippy.py  test_sip_connection.sh
mcp-server-isip/: QUICKSTART.md  README.md  TROUBLESHOOTING.md  pyproject.toml
mcp-server-isip/src/mcp_server_isip/: __init__.py  server.py
sdk/python/: README.md  pyproject.toml
sdk/python/siptester/: __init__.py  cli.py  client.py  sippy.py
