[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-isip"
version = "0.1.0"
description = "MCP Server for iSIP - Make phone calls from AI assistants"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Walker", email = "nate@ravenhelm.co" }
]
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-server-isip = "mcp_server_isip.server:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

